I have no idea why flex align center is now working, but this margin-bottom is no longer needed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -845,7 +845,6 @@ a.back-to-search:after {
 }
 a.back-to-search .glyphicon-chevron-left {
 	color: #333;
-	margin-bottom: .5rem;
 	margin-right: .5rem;
 	transform: scale(1.5);
 }
